# mhcmatch

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  environment.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml  docs.yml  publish.yml
appendix/: Makefile  hierarchical_rules.md  mhcmatch.tex  refs.bib
bench/: bench_diffusion.py  bench_spans.py  bench_speed.py  build_pseudo_fasta.py  confusion.py  fisher_kernel.py  length_prior_mhc2.py  make_figures.py  pdb_flanks.py  promiscuity_graph.py  structural_figure.py  structural_pockets.py  structure3d.py  train_spans.py  transfer.py  tune_diffusion.py
bench/affinity/: SOURCES.md  bench_structure.py  data.py  eval.py  fit_potts.py  stability.py  stability_head.py  tesla.py  train.py  train_gbm.py  train_glm.py  train_potts.py
bench/compare/: SOURCES.md  alleles.py  metrics.py  netmhc.py  predictors.py  provenance.py  report.py  run_compare.py  sample_concordance.py  splits.py  task.py
bench/immuno/: composite.py  composite_train.py  composite_weights.json  eval.py  tesla_wt.tsv  wt_cache.py
bench/results/: affinity_iedb.md  affinity_tesla.md  binder_gate_length_bias.md  compare_mhc1_human_hard_ligandbg.md  compare_mhc1_human_random_markovbg.md  compare_mhc1_human_random_proteomebg.md  compare_mhc2_human_hard_ligandbg.md  compare_mhc2_human_hard_ligandbg_elonly.md  compare_mhc2_human_random_proteomebg.md  compare_mhc2_mouse_hard_ligandbg.md  compare_mhc2_mouse_random_proteomebg.md  composite.md  concordance_tesla1_mhc1.md  concordance_tesla1_mhc2.md  confusion_mhc1_human.md  cv_mhc1_human_full.md  cv_mhc1_human_shortlist.md  cv_mhc1_mouse_full.md  cv_mhc2_human_full.md  fisher_mhc1_human.md  immuno_nci.md  immuno_tesla.md  length_prior_mhc2.md  locus_mhc1_human.md  locus_mhc2_human.md  register_em_mhc2.md  spans_mhc1_human.md  spans_mhc2_human.md  stability.md  stability_head.md  transfer_mhc1_human.md
deploy/: Dockerfile  README.md
deploy/nextflow/: mhcmatch_predict.nf
docs/: Makefile  api.rst  conf.py  getting-started.rst  index.rst
docs/_static/: custom.css
integrations/nextflow/mhcmatch/: Dockerfile  README.md  environment.yml  main.nf  nextflow.config
skills/mhcmatch/: SKILL.md
src/mhcmatch/: __init__.py  affinity.py  calibrate.py  cli.py  diffusion.py  ligand.py  logo.py  mimics.py  predict.py  proteome.py  pseudoseq.py  search.py  store.py  structure.py
src/mhcmatch/data/: PROVENANCE.md  affinity_mhc1.json  affinity_potts_mhc1.npz  affinity_potts_mhc2.npz  ligand_context.tsv  mhc2_alpha_prior.tsv  mhci_pseudo.fa  mhcii_pseudo.fa  proteome_markov1.tsv  structural_pockets_mhc1.tsv  structural_pockets_mhc2.tsv  structure_templates.json
tests/: test_affinity.py  test_bootstrap.py  test_calibrate.py  test_concordance.py  test_mhcmatch.py  test_mimics.py  test_predict.py
tools/: build_anchor_models.py
